--- a/front/admin/admin.html
+++ b/front/admin/admin.html
@@ -31,6 +31,19 @@
             <option value="4">Previsões</option>
         </select><br><br>
 
+        <label for="isDestaque">Matéria é Destaque:</label>
+        <select id="isDestaque" name="Matéria_Destaque">
+            <option value=0>Não</option>
+            <option value=1>Sim</option>
+        </select>
+
+        <label for="nivelDestaque">Nível de Destaque:</label>
+        <select id="nivelDestaque" name="nivel_Destaque">
+            <option value="1">1 = Manchete Principal</option>
+            <option value="2">2 = Submatérias</option>
+            <option value="3">3 = Matérias Comúns</option>
+        </select>
+
         <button id="button_redirecionar" type="button">Editar/Apagar Matéria</button>
 
         <button type="submit" id="button_adicionar">Adicionar Matéria</button>
