--- a/front/admin_edit/admin_edit.html
+++ b/front/admin_edit/admin_edit.html
@@ -34,6 +34,19 @@
         <label for="imagem_url">URL da Imagem:</label>
         <input type="text" id="imagem_url" name="imagem_url" required><br><br>
 
+         <label for="isDestaque">Matéria é Destaque:</label>
+        <select id="isDestaque" name="Matéria_Destaque">
+            <option value=0>Não</option>
+            <option value=1>Sim</option>
+        </select>
+
+        <label for="nivelDestaque">Nível de Destaque:</label>
+        <select id="nivelDestaque" name="nivel_Destaque">
+            <option value="1">1 = Manchete Principal</option>
+            <option value="2">2 = Submatérias</option>
+            <option value="3">3 = Matérias Comúns</option>
+        </select>
+
         <label for="categoria_id">Categoria:</label>
         <select id="categoria_id" name="categoria_id" required>
             <option value="1">Política</option>
