--- a/footer/footer.html
+++ b/footer/footer.html
@@ -1,11 +1,20 @@
 <footer>
         <div class="conteudo_footer">
-            <img src="../utils/img/logo-branca.png"  href="../index.html" id="logo">
-            <a href="../topico/topico.html?id=1">Economia</a>
+            
+            <a href="../index.html" class="logo_branca">
+                <img src="../utils/img/logo-branca.png" id="logo">
+            </a>
+
+                <a href="../topico/topico.html?id=1">Economia</a>
                 <a href="../topico/topico.html?id=2">Política</a>
                 <a href="../topico/topico.html?id=3">Curiosidades</a>
                 <a href="../topico/topico.html?id=4">Previsões</a>
-            <h4>Fale Conosco</h4>
+
+            <div class="fale_conosco">
+                <h4>Fale Conosco</h4>
+            <p>equipe@jornalmoney.com</p>
+            </div>
+            
 
             <div class="line_footer"></div>
 
