--- a/index.html
+++ b/index.html
@@ -22,43 +22,44 @@
 
         </div><!--bloco_manchete-->
     </div><!--manchete-->
+    <div class="container_materias">
+        
+        <div class="materias" id="materias_Economia">
 
-    <div class="materias" id="materias_Economia">
+            <div class="titulo_materia">
+                <div class='line_titulo'></div>
+                <a href="../topico/topico.html?id=1">Economia</a>
+            </div>
 
-        <div class="titulo_materia">
-            <div class='line_titulo'></div>
-            <a href="../topico/topico.html?id=1">Economia</a>
-        </div>
+        </div><!--materias-->
 
-    </div><!--materias-->
+        <div class="materias" id="materias_Politica">
 
-    <div class="materias" id="materias_Politica">
+            <div class="titulo_materia">
+                <div class='line_titulo'></div>
+                <a href="../topico/topico.html?id=2">Política</a>
+            </div>
 
-        <div class="titulo_materia">
-            <div class='line_titulo'></div>
-             <a href="../topico/topico.html?id=2">Política</a>
-        </div>
+        </div><!--materias-->
 
-    </div><!--materias-->
+        <div class="materias" id="materias_Curiosidades">
 
-    <div class="materias" id="materias_Curiosidades">
+            <div class="titulo_materia">
+                <div class='line_titulo'></div>
+                <a href="../topico/topico.html?id=3">Curiosidades</a>
+            </div>
 
-        <div class="titulo_materia">
-            <div class='line_titulo'></div>
-            <a href="../topico/topico.html?id=3">Curiosidades</a>
-        </div>
+        </div><!--materias-->
 
-    </div><!--materias-->
+        <div class="materias" id="materias_Previsões">
 
-    <div class="materias" id="materias_Previsões">
+            <div class="titulo_materia">
+                <div class='line_titulo'></div>
+                <a href="../topico/topico.html?id=4">Previsões</a>
+            </div>
 
-        <div class="titulo_materia">
-            <div class='line_titulo'></div>
-            <a href="../topico/topico.html?id=4">Previsões</a>
-        </div>
-
-    </div><!--materias-->
-
+        </div><!--materias-->
+ </div><!--container de todas materias-->
     <div id="footer-container"></div>
 
     <script src="principal.js" type="module"></script>
