--- a/topico/topico.html
+++ b/topico/topico.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="../utils/icons/logooo.png" type="image/png">
 </head>
 <body>
-
+<div id="page-wrapper">
     <div class="conteudo_topico">
 
         <div class="titulo_topico">
@@ -27,9 +27,8 @@
 
     </div> <!--conteudo_topico-->
 
-
     <div id="footer-container"></div>
-
+</div>
     <script src="topico.js" type="module"></script>   
 </body>
 </html>
