--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             <div class="titulo_materia">
                 <div class='line_titulo'></div>
-                <a href="../topico/topico.html?id=1">Economia</a>
+                <a href="topico/topico.html?slug=economia">Economia</a>
             </div>
 
         </div><!--materias-->
@@ -37,7 +37,7 @@
 
             <div class="titulo_materia">
                 <div class='line_titulo'></div>
-                <a href="../topico/topico.html?id=2">Política</a>
+                <a href="topico/topico.html?slug=politica">Política</a>
             </div>
 
         </div><!--materias-->
@@ -46,7 +46,7 @@
 
             <div class="titulo_materia">
                 <div class='line_titulo'></div>
-                <a href="../topico/topico.html?id=3">Curiosidades</a>
+                <a href="topico/topico.html?slug=curiosidades">Curiosidades</a>
             </div>
 
         </div><!--materias-->
@@ -55,7 +55,7 @@
 
             <div class="titulo_materia">
                 <div class='line_titulo'></div>
-                <a href="../topico/topico.html?id=4">Previsões</a>
+                <a href="topico/topico.html?slug=previsoes">Previsões</a>
             </div>
 
         </div><!--materias-->
