--- a/footer/footer.html
+++ b/footer/footer.html
@@ -2,7 +2,7 @@
         <div class="conteudo_footer">
             
             <a href="../index.html" class="logo_branca">
-                <img src="../utils/img/logo-branca.png" id="logo">
+                <img id="logo" class="logo_branca" src="../utils/img/logo-branca.png" alt="">
             </a>
 
                 <a href="../topico/topico.html?id=1">Economia</a>
@@ -19,10 +19,23 @@
             <div class="line_footer"></div>
 
             <div class="logos_footer">
-                <img src="../utils/icons/ic--baseline-facebook.svg">
-                <img src="../utils/icons/mdi--instagram.svg">
-                <img src="../utils/icons/mdi--linkedin.svg">
-                <img src="../utils/icons/mdi--youtube.svg">
+
+                <a href="https://www.facebook.com/profile.php?id=61583246846362" target="_blank">
+                    <img src="../utils/icons/ic--baseline-facebook.svg" alt="Facebook" class="icon facebook">
+                </a>
+
+                <a href="https://www.instagram.com/jornalmoney_/" target="_blank">
+                    <img src="../utils/icons/mdi--instagram.svg" alt="Instagram" class="icon instagram">
+                </a>
+
+                <a href="https://www.youtube.com/@Jornal_Money" target="_blank">
+                    <img src="../utils/icons/mdi--linkedin.svg" class="icon linkedin">
+                </a>
+
+                <a href="https://www.youtube.com/@Jornal_Money" target="_blank">
+                    <img src="../utils/icons/mdi--youtube.svg" class="icon youtube">
+                </a>
+                
             </div>
 
             <div class="descricao_footer">
